Fix Course views markup + delete route saving from ViewStart + fix Course Controller and service

--- a/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
@@ -61,6 +61,11 @@
         {
             <h3 class="text-center">@Headings.NoData</h3>
         }
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
         <h2 class="text-center">@Headings.Books</h2>
         <h3 class="text-center">@Headings.DataTable</h3>
         <table class="table table-hover">
@@ -111,6 +116,11 @@
         {
             <h3 class="text-center">@Headings.NoData</h3>
         }
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
         <h2 class="text-center">@Headings.Videos</h2>
         <h3 class="text-center">@Headings.DataTable</h3>
         <table class="table table-hover">
@@ -151,6 +161,11 @@
         {
             <h3 class="text-center">@Headings.NoData</h3>
         }
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
+        <div class="border-top my-3"></div>
         <h2 class="text-center">@Headings.Perks</h2>
         <h3 class="text-center">@Headings.DataTable</h3>
         <table class="table table-hover">
@@ -182,6 +197,11 @@
             <h3 class="text-center">@Headings.NoData</h3>
         }
     </div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
     <input asp-for="Id" type="hidden" />
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
 }
