Further fixes to CourseViewModelService and controller + update markup for profile dropdown

--- a/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
+++ b/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
@@ -16,3 +16,48 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.dropbtn {
+  color: black;
+  padding: 5px;
+  width: 100px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+    left: 0;
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    color: #f1f1f1;
+    background-color: #2a2a2a;
+}
