--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="Index">Articles</a>
                         </li>
@@ -37,6 +37,32 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <div class="dropdown">
+                                      <button class="dropbtn nav-link">Profile</button>
+                                      <div class="dropdown-content">
+                                        <a class="nav-link text-dark">Link 1</a>
+                                        <a class="nav-link text-dark">Link 2</a>
+                                        <a asp-controller="Auth" asp-action="Logout" class="nav-link text-dark" style="color: darkred">
+                                            Log out
+                                        </a>
+                                      </div>
+                                    </div>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Sign up</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Sign in</a>
+                                </li>
+                            }
                     </ul>
                 </div>
             </div>
