--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -57,10 +57,10 @@
                             else
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Sign up</a>
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Sign in</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Sign in</a>
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Sign up</a>
                                 </li>
                             }
                     </ul>
