Add role distinction to views

--- a/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
@@ -12,7 +12,10 @@
 <h1 class="text-center">@ViewData["Title"]</h1>
 <h2 class="text-center">@Headings.DataTable</h2>
 
-<a asp-controller="Book" asp-action="AddOrEdit" class="btn btn-primary">@Actions.Create</a>
+@if (User.IsInRole(nameof(Roles.Admin)))
+{
+    <a asp-controller="Book" asp-action="AddOrEdit" class="btn btn-primary">@Actions.Create</a>
+}
  
 <div id="book-table-view">
     @await Html.PartialAsync("_BookPartial", Model)
