--- a/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
@@ -32,14 +32,20 @@
                     @book.Format
                 </td>
                 <td class="d-flex flex-row-reverse">
-                    <a asp-controller="Book" asp-action="AddOrEdit" asp-route-id="@book.Id" class="btn btn-secondary">
-                        @Actions.Edit
-                    </a>
+                    @if (User.IsInRole(nameof(Roles.Moderator)) || User.IsInRole(nameof(Roles.Admin)))
+                    {
+                        <a asp-controller="Book" asp-action="AddOrEdit" asp-route-id="@book.Id" class="btn btn-secondary">
+                            @Actions.Edit
+                        </a>
+                    }
                 </td>
                 <td>
-                    <a class="btn btn-danger" url="@Url.Action("Delete", "Book")" data_id="@book.Id">
-                        @Actions.Delete
-                    </a>
+                    @if (User.IsInRole(nameof(Roles.Admin)))
+                    {
+                        <a class="btn btn-danger" url="@Url.Action("Delete", "Book")" data_id="@book.Id">
+                            @Actions.Delete
+                        </a>
+                    }
                 </td>
             </tr>
         }
