--- a/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
@@ -11,6 +11,8 @@
     }
 }
 
+@if (User.IsInRole(nameof(Roles.Admin)) || (!Model.Id.Equals(default) && User.IsInRole(nameof(Roles.Moderator))))
+{
 @using (Html.BeginForm("AddOrEdit", "Course", FormMethod.Post))
 {
     <div class="mb-2">
@@ -204,4 +206,5 @@
     <div class="border-top my-3"></div>
     <input asp-for="Id" type="hidden" />
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
+}
 }
