--- a/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
@@ -21,18 +21,24 @@
                 </td>
                 <td>
                     <div class="d-flex flex-row-reverse">
-                        <a asp-controller="Course" asp-action="AddOrEdit" asp-route-id="@course.Id" class="btn btn-secondary">
-                            @Actions.Edit
-                        </a>
+                        @if (User.IsInRole(nameof(Roles.Moderator)) || User.IsInRole(nameof(Roles.Admin)))
+                        {
+                            <a asp-controller="Course" asp-action="AddOrEdit" asp-route-id="@course.Id" class="btn btn-secondary">
+                                @Actions.Edit
+                            </a>
+                        }
                         <a asp-controller="Course" asp-action="Details" asp-route-id="@course.Id" class="btn btn-light">
                             @Actions.Details
                         </a>
                     </div>
                 </td>
                 <td>
-                    <a class="btn btn-danger" url="@Url.Action("Delete", "Course")" data_id="@course.Id">
-                        @Actions.Delete
-                    </a>
+                    @if (User.IsInRole(nameof(Roles.Admin)))
+                    {
+                        <a class="btn btn-danger" url="@Url.Action("Delete", "Course")" data_id="@course.Id">
+                            @Actions.Delete
+                        </a>
+                    }
                 </td>
             </tr>
         }
