--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -24,14 +24,20 @@
                     @article.Published.Date.ToShortDateString()
                 </td>
                 <td class="d-flex flex-row-reverse">
-                    <a asp-controller="Article" asp-action="AddOrEdit" asp-route-id="@article.Id" class="btn btn-secondary">
-                        @Actions.Edit
-                    </a>
+                    @if (User.IsInRole(nameof(Roles.Moderator)) || User.IsInRole(nameof(Roles.Admin)))
+                    {
+                        <a asp-controller="Article" asp-action="AddOrEdit" asp-route-id="@article.Id" class="btn btn-secondary">
+                            @Actions.Edit
+                        </a>
+                    }
                 </td>
                 <td>
-                    <a class="btn btn-danger" url="@Url.Action("Delete", "Article")" data_id="@article.Id">
-                        @Actions.Delete
-                    </a>
+                    @if (User.IsInRole(nameof(Roles.Admin)))
+                    {
+                        <a class="btn btn-danger" url="@Url.Action("Delete", "Article")" data_id="@article.Id">
+                            @Actions.Delete
+                        </a>
+                    }
                 </td>
             </tr>
         }
