--- a/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
@@ -11,6 +11,8 @@
     }
 }
 
+@if (User.IsInRole(nameof(Roles.Admin)) || (!Model.Id.Equals(default) && User.IsInRole(nameof(Roles.Moderator))))
+{
 @using(Html.BeginForm("AddOrEdit", "Book", FormMethod.Post))
 {
     if (Model.Authors == null)
@@ -43,4 +45,5 @@
     </div>
     <input asp-for="Id" type="hidden"/>
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
+}
 }
