--- a/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
+++ b/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
@@ -61,3 +61,11 @@ body {
     color: #f1f1f1;
     background-color: #2a2a2a;
 }
+
+.min-vw-20 {
+    width: 20vw;
+}
+
+.progress-margin {
+    margin: 0;
+}
