--- a/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Profile.Password)
-            @Html.TextBoxFor(m => m.Password)
+            @Html.TextBoxFor(m => m.Password, new {type = "password"})
         </div>
     </div>
     <div class="d-flex justify-content-around">
