--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,12 @@
                                         <a asp-controller="User" asp-action="Courses" class="nav-link text-dark">
                                             @Profile.ProfileCourses
                                         </a>
+                                        <a asp-controller="User" asp-action="Materials" class="nav-link text-dark">
+                                            @Profile.ProfileMaterials
+                                        </a>
+                                        <a asp-controller="User" asp-action="Perks" class="nav-link text-dark">
+                                            @Profile.ProfilePerks
+                                        </a>
                                         <div class="dropdown-divider"></div>
                                         <a asp-controller="Auth" asp-action="Logout" class="nav-link text-danger">
                                             @Actions.Logout
