Create js validation for login and register + make css updated

--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -71,10 +71,10 @@
                             else
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Sign in</a>
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">@Actions.Login</a>    
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Sign up</a>
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">@Actions.Register</a>
                                 </li>
                             }
                     </ul>
