--- a/backend/Portal.UI-MVC-Web/Views/User/Perks.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/User/Perks.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = @Profile.ProfilePerks;
 }
 
-<h1 class="text-center">@Profile.ProfileMaterials</h1>
-<table class="table table-hover" id="book-table">
+<h1 class="text-center">@Profile.ProfilePerks</h1>
+<table class="table table-hover">
     <thead>
         <tr>
             <th scope="col">@Objects.Name</th>
