--- a/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
@@ -12,10 +12,12 @@
         <div class="d-flex flex-column">
             @Html.Label(@Profile.Email)
             @Html.TextBoxFor(m => m.Email)
+            <span asp-validation-for="Email"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Profile.Password)
             @Html.TextBoxFor(m => m.Password, new {type = "password"})
+            <span asp-validation-for="Email"></span>
         </div>
     </div>
     <div class="d-flex justify-content-around">
