--- a/backend/Portal.UI-MVC-Web/Views/Auth/Register.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Auth/Register.cshtml
@@ -12,14 +12,22 @@
         <div class="d-flex flex-column">
             @Html.Label(@Profile.Email)
             @Html.TextBoxFor(m => m.Email)
+            <span asp-validation-for="Email"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Profile.Password)
-            @Html.TextBoxFor(m => m.Password)
+            @Html.TextBoxFor(m => m.Password, new {type = "password"})
+            <span asp-validation-for="Password"></span>
         </div>
     </div>
     <div class="d-flex justify-content-around">
         <input class="btn btn-primary" type="submit" value="@Actions.Register">
         <a asp-action="Login" asp-controller="Auth" class="btn btn-secondary">@Actions.Login</a>
     </div>
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
