--- a/backend/Portal.UI-MVC-Web/Views/User/Materials.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/User/Materials.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="text-center">@Profile.ProfileMaterials</h1>
-<table class="table table-hover" id="book-table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th scope="col">@Objects.Description</th>
