--- a/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
+++ b/backend/Portal.UI-MVC-Web/wwwroot/css/site.css
@@ -23,6 +23,7 @@ body {
   width: 100px;
   font-size: 16px;
   border: none;
+  border-radius: 8px;
   cursor: pointer;
 }
 
@@ -60,6 +61,7 @@ body {
 .dropdown:hover .dropbtn {
     color: #f1f1f1;
     background-color: #2a2a2a;
+    border-radius: 8px 8px 0px 0px;
 }
 
 .min-vw-20 {
@@ -68,4 +70,13 @@ body {
 
 .progress-margin {
     margin: 0;
+}
+
+.input-validation-error {
+    border: 2px solid #CD0A0A;
+    border-radius: 5px;
+}
+
+.field-validation-error {
+    color: #CD0A0A;
 }
