Add validation js + update css

--- a/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
@@ -42,7 +42,7 @@
     </div>
     @if (Model.Articles.Any())
     {
-    <h2 class="text-center">@Headings.Articles</h2>
+    <h2>@Headings.Articles</h2>
     <table class="table table-hover">
         <thead>
             <tr>
@@ -76,7 +76,7 @@
     }
     @if (Model.Books.Any())
     {
-    <h2 class="text-center">@Headings.Books</h2>
+    <h2>@Headings.Books</h2>
     <table class="table table-hover">
         <thead>
             <tr>
@@ -118,7 +118,7 @@
     }
     @if (Model.Videos.Any())
     {
-        <h2 class="text-center">@Headings.Videos</h2>
+        <h2>@Headings.Videos</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -152,7 +152,7 @@
     }
     @if (Model.Perks.Any())
     {
-    <h2 class="text-center">@Headings.Perks</h2>
+    <h2>@Headings.Perks</h2>
     <table class="table table-hover">
         <thead>
             <tr>
