--- a/backend/Portal.UI-MVC-Web/Views/Article/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/AddOrEdit.cshtml
@@ -19,17 +19,26 @@
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Title)
             @Html.TextBoxFor(m => m.Title)
+            <span asp-validation-for="Title"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Url)
             @Html.TextBoxFor(m => m.Url)
+            <span asp-validation-for="Url"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Published)
             <input asp-for="Published" type="date">
+            <span asp-validation-for="Published"></span>
         </div>
     </div>
     <input asp-for="Id" type="hidden"/>
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
 }
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
