--- a/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Auth/Login.cshtml
@@ -25,3 +25,9 @@
         <a asp-action="Register" asp-controller="Auth" class="btn btn-secondary">@Actions.Register</a>
     </div>
 }
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
