--- a/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
@@ -25,10 +25,12 @@
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Title)
             @Html.TextBoxFor(m => m.Title)
+            <span asp-validation-for="Title"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.PageCount)
             @Html.TextBoxFor(m => m.PageCount)
+            <span asp-validation-for="PageCount"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Author)
@@ -37,13 +39,21 @@
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Published)
             <input asp-for="Published" type="date">
+            <span asp-validation-for="Published"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Format)
             @Html.TextBoxFor(m => m.Format)
+            <span asp-validation-for="Format"></span>
         </div>
     </div>
     <input asp-for="Id" type="hidden"/>
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
 }
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
