--- a/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
@@ -19,12 +19,14 @@
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Name)
             @Html.TextBoxFor(m => m.Name)
+            <span asp-validation-for="Name"></span>
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Description)
             @Html.TextAreaFor(m => m.Description)
+            <span asp-validation-for="Description"></span>
         </div>
-        <h2 class="text-center">@Headings.Articles</h2>
+        <h2>@Headings.Articles</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -67,7 +69,7 @@
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
-        <h2 class="text-center">@Headings.Books</h2>
+        <h2>@Headings.Books</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -121,7 +123,7 @@
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
-        <h2 class="text-center">@Headings.Videos</h2>
+        <h2>@Headings.Videos</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -165,7 +167,7 @@
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
         <div class="border-top my-3"></div>
-        <h2 class="text-center">@Headings.Perks</h2>
+        <h2>@Headings.Perks</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -203,4 +205,10 @@
     <input asp-for="Id" type="hidden" />
     <input class="btn btn-primary" type="submit" value="@Actions.Submit">
 }
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
