--- a/backend/Portal.UI-MVC-Web/Views/User/Attend.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/User/Attend.cshtml
@@ -1,5 +1,9 @@
 ﻿@model AttendViewModel
 
+@{
+    ViewData["Title"] = @Actions.Attend
+}
+
 <div class="mb-2">
         <div class="d-flex flex-column">
             @Html.Label(@Objects.Name)
