fix build error, add missing semicolons

--- a/backend/Portal.UI-MVC-Web/Views/User/Attend.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/User/Attend.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AttendViewModel
 
 @{
-    ViewData["Title"] = @Actions.Attend
+    ViewData["Title"] = @Actions.Attend;
 }
 
 <div class="mb-2">
