--- a/backend/Portal.UI-MVC-Web/Views/User/Info.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/User/Info.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserDTO
 
 @{
-    ViewData["Title"] = @Profile.Info
+    ViewData["Title"] = @Profile.Info;
     Context.Session.SetString("LastUrl", Context.Request.Path);
 }
 
