Domain renames of specification + usings

--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -18,7 +18,7 @@
                     @article.Title
                 </th>
                 <td>
-                    @article.Url
+                    <a href="@article.Url">@article.Url</a>
                 </td>
                 <td>
                     @article.Published.Date.ToShortDateString()
